[tool.poetry]
name = "job-application-tools"
version = "0.1.0"
description = ""
authors = ["nick <github@turneron.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.2.1"
langchain = "^0.2.14"
langchain-openai = "^0.1.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
